--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="footer-content">
         <p>© 2025 Quantum Signal Loss (QSL) | All Rights Reserved</p>
         <div class="footer-contact">
-            <p>Contact Mission Control: <a href="mailto:vivekmishra.space@gmail.com">vivekmishra.space@gmail.com</a></p>
+            <p>Contact: <a href="mailto:vivekmishra.space@gmail.com">vivekmishra.space@gmail.com</a></p>
         </div>
 </footer> 
  <script src="script.js" defer></script>
