--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
     <p style="margin-top: 30px; font-size: 1rem; color: #aaa;">"Bringing space to young minds, one line of code at a time." ✨</p>
 </section>
 <!--  -->
+<section id="research" style="text-align:center; margin:40px;">
+  <h3>Research Publication</h3>
+  <p>
+    This simulator is based on the preprint:<br>
+    <b>Quantum Signal Loss (QSL)</b><br>
+    DOI: <a href="https://doi.org/10.5281/zenodo.16919283" target="_blank">
+      10.5281/zenodo.16919283
+    </a>
+  </p>
+</section>
+    
 <footer>
     <div class="footer-content">
         <p>© 2025 Quantum Signal Loss (QSL) | All Rights Reserved</p>
