--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <p>Visits: <span class="counter-display">0</span></p>
     
     <button id="themeToggle">Switch Theme</button>
     <header style="text-align: center; padding: 30px 20px;">
