--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+ <a href='http://www.freevisitorcounters.com'>freevisitorcounterss Homepage</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=b3d99115eeeae91203bc7810fdf8108e4b4714c7'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1380855/t/10"></script>
+
     
     <button id="themeToggle">Switch Theme</button>
     <header style="text-align: center; padding: 30px 20px;">
