--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <script>
     // Use CountAPI to get & increment counter
-    fetch('https://api.countapi.xyz/hit/observer33/mywebsite')
+    fetch('https://api.countapi.xyz/hit/https://qsl-simulator.vercel.app//mywebsite')
       .then(res => res.json())
       .then(data => {
         document.getElementById('counter').innerText = data.value;
