--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
     <p style="margin-top: 30px; font-size: 1rem; color: #aaa;">"Bringing space to young minds, one line of code at a time." ✨</p>
 </section>
 <!--  -->
+
+<!-- Elfsight Visitor Counter | Untitled Visitor Counter -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-0562e8b3-9ee3-40ab-b4ab-3b8066922fd8" data-elfsight-app-lazy></div>
+
+    
+
+    
+<!--  -->
 <section id="research" style="text-align:center; margin:40px;">
   <h3>Research Publication</h3>
   <p>
