--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <!-- Elfsight Visitor Counter | Untitled Visitor Counter -->
 <script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-0562e8b3-9ee3-40ab-b4ab-3b8066922fd8" data-elfsight-app-lazy></div>
+<div class="elfsight-app-0562e8b3-9ee3-40ab-b4ab-3b8066922fd8" data-elfsight-app-lazy> Visitor Counter</div>
 
     
 
