--- a/index.html
+++ b/index.html
@@ -106,9 +106,8 @@
 </section>
 <!--  -->
     
-<!-- Elfsight Visitor Counter | Untitled Visitor Counter -->
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-0562e8b3-9ee3-40ab-b4ab-3b8066922fd8" data-elfsight-app-lazy></div>
+<script src="https://cdn.commoninja.com/sdk/latest/commonninja.js" defer></script>
+<div class="commonninja_component pid-ca927f22-03a2-4299-bda7-bd58d0ec5a25"></div>
     
 <!--  -->
 <footer>
