--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
   </p>
 </section>
 <!--  -->
+
+<section style="text-align:center; margin:40px;">
+  <h3>Visitor Counter</h3>
+  <p>Unique Visitors: <span id="visitorCount"></span></p>
+</section>
+
     
 <!--  -->
 <footer>
