--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 <!--  -->
 
 <section style="text-align:center; margin:40px;">
-  <h4>Visitor Counter</h4>
-  <p>Unique Visitors: <span id="visitorCount"></span></p>
+  <h3>Visitor Counter</h3>
+  <p>Total Visitors: <span id="visitorCounter">0</span></p>
 </section>
 
     
