--- a/index.html
+++ b/index.html
@@ -107,11 +107,12 @@
 </section>
 <!--  -->
 
-<section style="text-align:center; margin:40px;">
-  <h3>Visitor Counter</h3>
-  <p>Total Visitors: <span id="visitorCounter">0</span></p>
-</section>
-
+<!-- Default gnrcounter.com code for https://qsl-simulator.vercel.app/ -->
+<script language="JavaScript" type="text/javascript" src="https://gnrcounter.com/counter.php?accId=4e25233975d3cb5c42dd6ce28f468c27"></script>
+<noscript>
+<a href="https://gnrcounter.com" title="Web Analytics">Web Analytics</a>
+</noscript>
+<!-- End of gnrcounter.com Code -->
     
 <!--  -->
 <footer>
