--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </p>
       
         <p>
-          I’m the creator of <strong>IMF–GDD</strong> (Inertial Memory Field (IMF) and Graviton Displacement Drift(GDD)).
+          I’m the creator of <strong>IMF–GDD</strong> Physcics Theory.
           Now, with <strong>QSL</strong>, I’ve developed a scalar-based simulation framework that models quantum signal degradation in extreme cosmic environments.
         </p>
 
