--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 
 
-    <button id="themeToggle">Switch Theme</button>
+    <button id="themeToggle"></button>
     <header style="text-align: center; padding: 30px 20px;">
         
         <h1 style="font-size: 2.5em; margin-bottom: 10px;"></h1style>Quantum Signal Loss (QSL)</h1>
