--- a/index.html
+++ b/index.html
@@ -109,10 +109,15 @@
 <!--  -->
 
 <!-- Default gnrcounter.com code for https://qsl-simulator.vercel.app/ -->
-<script language="JavaScript" type="text/javascript" src="https://gnrcounter.com/counter.php?accId=895011af354ef007044975be9015fa78"></script>
-<noscript>
-<a href="https://gnrcounter.com" title="Web Analytics">Web Analytics</a>
-</noscript>
+<div id="visitorCounterOverlay">
+  <div class="overlay-content">
+    <script language="JavaScript" type="text/javascript" src="https://gnrcounter.com/counter.php?accId=895011af354ef007044975be9015fa78"></script>
+    <noscript>
+      <a href="https://gnrcounter.com" title="Web Analytics">Web Analytics</a>
+    </noscript>
+  </div>
+</div>
+
 <!-- End of gnrcounter.com Code -->   
     
 <!--  -->
