--- a/index.html
+++ b/index.html
@@ -109,14 +109,16 @@
 <!--  -->
 
 <!-- Default gnrcounter.com code for https://qsl-simulator.vercel.app/ -->
-<div id="visitorCounterOverlay">
-  <div class="overlay-content">
-<script language="JavaScript" type="text/javascript" src="https://gnrcounter.com/counter.php?accId=895011af354ef007044975be9015fa78"></script>
-<noscript>
-<a href="https://gnrcounter.com" title="Web Analytics">Web Analytics</a>
-</noscript>
-  </div>
+<div id="visitorCounterBar">
+  <script language="JavaScript" type="text/javascript" src="https://gnrcounter.com/counter.php?accId=895011af354ef007044975be9015fa78"></script>
+  <noscript>
+    <a href="https://gnrcounter.com" title="Web Analytics">Web Analytics</a>
+  </noscript>
 </div>
+
+<!-- Click-blocking transparent overlay -->
+<div id="visitorCounterBlocker"></div>
+
 
 <!-- End of gnrcounter.com Code -->   
     
